--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,47 @@
+# ============================
+# Core Libraries
+# ============================
+pandas>=1.4.0
+numpy>=1.21.0
+matplotlib>=3.5.0
+opencv-python>=4.6.0
+pillow>=9.0.0
+imageio>=2.25.0
+scikit-image>=0.20.0
 
+# ============================
+# Machine Learning / Deep Learning
+# ============================
+torch>=2.0.0
+torchvision>=0.15.0
+tensorflow>=2.10.0
+tensorflow-hub>=0.12.0
 
-numpy
-pandas
-matplotlib
-opencv-python
+# ============================
+# Hugging Face + Diffusion Models
+# ============================
+diffusers>=0.18.0
+transformers>=4.30.0
+accelerate>=0.20.0
+safetensors>=0.3.0
+huggingface_hub>=0.16.0
 
+# ============================
+# For GAN Colorization
+# ============================
+fastai>=2.7.0
+
+# ============================
+# Object Detection (YOLO)
+# ============================
+ultralytics>=8.0.0
+
+# ============================
+# Jupyter Notebook Support
+# ============================
+ipython>=8.0.0
+jupyter>=1.0.0
+
+# Optional / Recommended
+tqdm>=4.60.0
+protobuf>=4.21.0
