--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ opencv-python>=4.6.0
 pillow>=9.0.0
 imageio>=2.25.0
 scikit-image>=0.20.0
+scikit-learn>=1.1.0
 
 # ============================
 # Machine Learning / Deep Learning
